working changecolors and aligns fixed font sizing

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     margin: 0;
+    
 }
 
 
@@ -47,6 +48,7 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
     grid-gap: 2rem;
     margin: 2rem;
+    margin-bottom: 5rem;
 }
 
 
@@ -60,8 +62,8 @@ a {
 }
 
 .hide{
-    visibility: hidden;
     display: none;
+    visibility: hidden;
 }
 
 
@@ -71,10 +73,11 @@ a {
 .meme-editor-container{
     display: flex;
     margin: 2rem;
-    height: 50rem
+    height: 50rem;
+    
 }
 
-.meme-settings input{
+.meme-settings input:first-child{
     padding: 0.25rem;
     margin-left: 4rem;
 
